<resources>
    <string name="app_name">Barcode</string>
    <string name="qr_code">QR Code</string>
    <string name="email_barcode">Email Barcode</string>
    <string name="text_barcode">Text Barcode</string>
    <string name="url_barcode">Url Barcode</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="send_email">Send email</string>
    <string name="url">Url</string>
    <string name="open_url">Open url</string>
    <string name="text">Text</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="studio">Studio</string>
    <string name="camera">Camera</string>
    <string name="history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number</string>
    <string name="dial">Dial</string>
    <string name="message">Message</string>
    <string name="send_sms">Send sms</string>
    <string name="wifi_name">Wifi name</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="copy_wifi_name">Copy wifi name</string>
    <string name="copy_wifi_password">Copy wifi password</string>
    <string name="encryption">Encryption</string>
    <string name="sms">Sms</string>
    <string name="phone">Phone</string>
    <string name="wifi">Wifi</string>
    <string name="clipboard">Clipboard</string>
    <string name="other_1d">Other 1D</string>
    <string name="enter_your_website">Enter your website</string>
    <string name="create">Create</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="hidden">Hidden</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="none">None</string>
    <string name="HTTPS">https://</string>
    <string name="custom">Custom</string>
    <string name="studentId">Student ID</string>
    <string name="student_name">Student name</string>
    <string name="enable_torch">Enable Torch</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
</resources>