<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        style="@style/linear_layout_background_style"
        tools:context=".view.studio.EmailStudioFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout_style"
            android:hint="@string/wifi_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wifi_studio_name_et"
                style="@style/text_input_edittext_style"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout_style"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wifi_studio_password_et"
                style="@style/text_input_edittext_style"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/wifi_studio_hidden_cb"
            style="@style/data_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:text="@string/hidden"
            android:textColor="@color/blue" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/wifi_studio_encryption_none_rb"
                style="@style/data_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/blue"
                android:checked="true"
                android:text="@string/none"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/wifi_studio_encryption_wpa_rb"
                style="@style/data_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/blue"
                android:text="@string/wpa_wpa2"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/wifi_studio_encryption_wep_rb"
                style="@style/data_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/blue"
                android:text="@string/wep"
                android:textColor="@color/blue" />

        </RadioGroup>

        <Button
            android:id="@+id/create_btn"
            style="@style/button_center_style"
            android:text="@string/create" />

    </LinearLayout>
</layout>