<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        style="@style/linear_layout_background_style"
        tools:context=".view.studio.EmailStudioFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout_style"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_studio_address_et"
                style="@style/text_input_edittext_style"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout_style"
            android:hint="@string/subject">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_studio_subject_et"
                style="@style/text_input_edittext_style"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout_style"
            android:hint="@string/body">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_studio_body_et"
                style="@style/text_input_edittext_style"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_btn"
            style="@style/button_center_style"
            android:text="@string/create" />

    </LinearLayout>
</layout>