<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light"
        tools:context=".MainActivity">

        <SurfaceView
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@id/overlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

        <Button
            android:id="@+id/image_choose_btn"
            style="@style/button_center_style"
            android:text="@string/choose_image"
            app:layout_constraintEnd_toStartOf="@id/enable_torch_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/enable_torch_btn"
            style="@style/button_center_style"
            android:text="@string/enable_torch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_choose_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/zoom_in_btn"
            style="@style/button_center_style"
            android:text="@string/zoom_in"
            app:layout_constraintEnd_toStartOf="@id/zoom_out_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_choose_btn" />

        <Button
            android:id="@+id/zoom_out_btn"
            style="@style/button_center_style"
            android:text="@string/zoom_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/zoom_in_btn"
            app:layout_constraintTop_toBottomOf="@id/enable_torch_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>